FIX: Dash tiles not cutting off long text entries [t14935]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10667 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -862,9 +862,8 @@ a.HomePanel:hover {
 	padding: 0;
 	overflow: hidden;
 	position: relative;
-	height: 100%;
+	height: 180px;
 	width: 100%;
-	min-height: 180px;
 }
 .HomePanelDynamicDash h2, .HomePanelThemes h2, .FeaturedSimpleTileContents h2 {
 	float: none;
